--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
-<div id="boy-bands">
-	<h2></h2>
-</div>
+<!DOCTYPEhtml>
+<html>
+	<body>
+		<div id="bb">
+			<p></p>
+		</div>
 
-<div id="vegetables">
-	<p></p>
-</div>
+		<div id="vg">
+			<p></p>
+		</div>
 
-<scipt src="boyband.js"></scipt>
+		<scipt src="boyband.js"></scipt>
+	</body>
+</html>
