--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
-<!DOCTYPEhtml>
+<!DOCTYPE html>
 <html>
-	<body>
-		<div id="bb">
-			<p></p>
-		</div>
+<head>
+	<title>boy bands</title>
+</head>
+<body>
 
-		<div id="vg">
-			<p></p>
-		</div>
+	<div id="bb">
+	</div>
 
-		<scipt src="boyband.js"></scipt>
-	</body>
+	<div id="vg">
+	</div>
+	<script src="boyband.js"></script>
+</body>
 </html>
